
	* libfuse: fix fs cleanup.  Reported by Eric Wong

	* libfuse: pass security context options to kernel.  Patch by
	Dalvik Khertel

	* libfuse: remove deprecated features:
	- fuse_is_lib_option()
	- fuse_invalidate()
	- fuse_set_getcontext_func()
	- fuse_loop_mt_proc()
	- fuse_read_cmd()
	- fuse_process_cmd()
	- fuse_setup()
	- fuse_teardown()
	- fuse_exited()

2013-02-06  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: set close-on-exec flag on pipe file descriptors.  Patch
	by Eric Wong

	* libfuse: add missing INIT flags

2013-02-05  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix fuse_get_context() in non fuse threads.  Reported
	by Michael Berlin

2013-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix crash in unlock_path().  Patch by Ratna Manoj

	* libfuse: fix the 'remember' option.  The lru list was not
	initialized for the "/" path.  This resulted in remove_node_lru()
	crashing on LOOKUP-DOTDOT.  Patch by Madan Valluri

	* libfuse: configure: detect new util-linux

	* libfuse: Use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
	Patch by Anatol Pomozov

	* libfuse: rename ./configure.in to ./configure.ac.  Patch by
	Anatol Pomozov

2012-10-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.9.2

2012-10-01  Miklos Szeredi <miklos@szeredi.hu>

	* Fix deadlock in libfuse.  Running "svn update" on a fuse
	filesystem could deadlock because of a bug in the way the paths
	are locked.  Reported by Kazuaki Anami

2012-08-23  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing config.h in buffer.c.  Reported by Matthew Gabeler-Lee

2012-08-14  Miklos Szeredi <miklos@szeredi.hu>

	* Not unhashing the name in forget (commit on 2011-12-09) broke
	the forget logic in a subtle way, resulting in "fuse internal
	error: node NNN not found" and causing the filesystem daemon to
	abort.  Fix by incrementing the node refcount if nlookup goes from
	zero to one.  Reported by Kyle Lippincott

2012-08-13  Miklos Szeredi <miklos@szeredi.hu>
